<resources>
    <string name="app_name" translatable="false">Esperpento</string>

    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>

    <string name="user_image">User image</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="show_password">Show password</string>
    <string name="log_in">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email">Email</string>
    <string name="logo_image">Logo image</string>
    <string name="user_or_pass_incorrect">User or password incorrect</string>
    <string name="error">Error</string>
    <string name="connection_error">Connection error</string>
    <string name="user_or_password_empty">User or password empty</string>
    <string name="user_created">User created</string>
    <string name="user_already_exists">User already exists</string>
    <string name="user_or_password_too_long">User or password too long</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="fill_all_inputs">Fill all inputs</string>
    <string name="bad_response">Bad response</string>
    <string name="home">Home</string>
    <string name="my_communities">My Communities</string>
    <string name="all_communities">All Communities</string>
    <string name="options">Options</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="development_url">Development URL</string>
    <string name="threads">Threads</string>
    <string name="subscriptors">Subscriptors</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="an_error_occurred">An error occurred :(</string>
    <string name="there_were_no_results">There were no results.</string>
    <string name="votes">Votes</string>
    <string name="comments">Comments</string>
    <string name="title">Title</string>
    <string name="by">by</string>
    <string name="on">on</string>
    <string name="community">Community</string>
    <string name="time">Time</string>
    <string name="admin">Admin:</string>
    <string name="subscribed">Subscribed</string>
    <string name="unsubscribed">Unsubscribed</string>
    <string name="subscribe">Subscribe</string>
    <string name="community_created">Community created</string>
    <string name="community_already_exists">There is already a community with that name</string>
    <string name="name_cant_be_empty">Name can\'t be empty</string>
    <string name="create">Create</string>
    <string name="error_creating_comment">Error creating comment</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="send">Send</string>
    <string name="thread_created">Thread created</string>
    <string name="error_creating_thread">Error creating thread</string>
    <string name="content">Content</string>
    <string name="user_name">User name</string>
    <string name="new_community">New Community</string>
    <string name="community_detail">Community Detail</string>
    <string name="thread_detail">Thread Detail</string>
    <string name="new_thread">New Thread</string>
    <string name="about_msg">Application developed by Emilio Vicente Medina as Final Project for Multiplatform Applications Development. GitHub repository: https://github.com/evicentemedina/esperpento</string>
</resources>
