<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<!--
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            />
        <item
            android:id="@+id/nav_my_communities"
            android:title="@string/my_communities"
            />
        <item
            android:id="@+id/nav_all_communities"
            android:title="@string/all_communities"
            />
    </group>

    <item android:title="@string/options">
        <menu>
            <!--item
                android:id="@+id/nav_preferences"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/preferences"
                /-->
            <item
                android:id="@+id/nav_about"
                android:title="@string/about"
                />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                />
        </menu>
    </item>

</menu>
