<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/listview_threads_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="18sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/by"
            />
        <TextView
            android:id="@+id/listview_threads_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/on"
            />
        <TextView
            android:id="@+id/listview_threads_comm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/community"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/listview_threads_votes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/votes"
            />
        <TextView
            android:id="@+id/listview_threads_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/comments"
            />
        <TextView
            android:id="@+id/listview_threads_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:text="@string/time"
            />
    </LinearLayout>
</LinearLayout>
