<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="evicentemedina.esperpento.SignInActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/signInEtUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:inputType="text"
            android:maxLength="20"
            />
        <EditText
            android:id="@+id/signInEtPass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="text|textPassword"
            android:maxLength="20"
            />
        <EditText
            android:id="@+id/signInEtPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:inputType="text|textPassword"
            android:maxLength="20"
            />
        <CheckBox
            android:id="@+id/signInCbShowPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_password"
            android:textColor="@android:color/tertiary_text_light"
            />
        <Button
            android:id="@+id/signInBtnSignIn"
            style="@android:style/Widget.Holo.Button"
            android:backgroundTint="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            />
    </LinearLayout>
</ScrollView>
