<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="evicentemedina.esperpento.LoginActivity"
    tools:showIn="@layout/activity_login"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_content"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_image"
            android:src="@drawable/ic_launcher_background"
            />
        <EditText
            android:id="@+id/loginEtUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user"
            android:inputType="text"
            android:maxLength="20"
            />
        <EditText
            android:id="@+id/loginEtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="text|textPassword"
            android:maxLength="20"
            />
        <CheckBox
            android:id="@+id/loginCbShowPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_password"
            android:textColor="@android:color/tertiary_text_light"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/loginBtnSignin"
                style="@android:style/Widget.Holo.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/loginBtnLogin"
                style="@android:style/Widget.Holo.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/log_in"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
