<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="evicentemedina.esperpento.CommDetailActivity"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_comm_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            />
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/comm_detail_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/comm_detail_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_launcher"
                    android:contentDescription="@string/logo_image"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/comm_detail_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="24sp"
                        />
                    <TextView
                        android:id="@+id/comm_detail_admin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/admin"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/comm_detail_threads"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/threads"
                            />
                        <TextView
                            android:id="@+id/comm_detail_time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/time"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:id="@+id/comm_detail_subscriptors"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/subscriptors"
                            />
                        <TextView
                            android:id="@+id/comm_detail_sub_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:paddingEnd="8dp"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/subscribe"
                            tools:ignore="RtlSymmetry"
                            />
                        <Switch
                            android:id="@+id/comm_detail_sub_sw"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/comm_detail_descrip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/description"
                />
        </LinearLayout>
        <FrameLayout
            android:id="@+id/comm_detail_framelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
